Fixing LESS global layout overflow on mobile (2)

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -13,7 +13,7 @@
 html,
 body {
     overflow-y: hidden;
-    height: 100vh;
+    height: 100%;
     height: -webkit-fill-available;
     max-width: 100%;
     font-size: @font-size-base;
